--- a/src/LayUI.Wpf.Extensions.App/App.xaml
+++ b/src/LayUI.Wpf.Extensions.App/App.xaml
@@ -1,9 +1,17 @@
-﻿<prism:PrismApplication x:Class="LayUI.Wpf.Extensions.App.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:LayUI.Wpf.Extensions.App"
-             xmlns:prism="http://prismlibrary.com/" >
+﻿<prism:PrismApplication
+    x:Class="LayUI.Wpf.Extensions.App.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:LayUI.Wpf.Extensions.App"
+    xmlns:prism="http://prismlibrary.com/">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary x:Key="lang">
+                <ResourceDictionary.MergedDictionaries>
+                    <ResourceDictionary Source="/languages/en_US.xaml" />
+                    <ResourceDictionary Source="/languages/zh_CN.xaml" />
+                </ResourceDictionary.MergedDictionaries>
+            </ResourceDictionary>
+        </ResourceDictionary>
     </Application.Resources>
 </prism:PrismApplication>
