--- a/src/LayUI.Wpf.Extensions.App/Views/MainWindow.xaml
+++ b/src/LayUI.Wpf.Extensions.App/Views/MainWindow.xaml
@@ -1,10 +1,35 @@
-﻿<Window x:Class="LayUI.Wpf.Extensions.App.Views.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:prism="http://prismlibrary.com/"
-        prism:ViewModelLocator.AutoWireViewModel="True"
-        Title="{Binding Title}" Height="350" Width="525" >
-    <Grid>
-        <ContentControl prism:RegionManager.RegionName="ContentRegion" />
-    </Grid>
+﻿<Window
+    x:Class="LayUI.Wpf.Extensions.App.Views.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:be="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:lay="clr-namespace:LayUI.Wpf.Extensions;assembly=LayUI.Wpf.Extensions"
+    xmlns:prism="http://prismlibrary.com/"
+    Title="{lay:Language {Binding Title}}"
+    Width="525"
+    Height="350"
+    prism:ViewModelLocator.AutoWireViewModel="True"
+    FontSize="20"
+    WindowStartupLocation="CenterScreen">
+    <StackPanel>
+        <Button Command="{Binding CNCommand}" Content="中文" />
+        <Button Command="{Binding USCommand}" Content="英文" />
+        <Button Command="{Binding LoadItemsCommand}" Content="加载数据" />
+        <TextBlock Text="{lay:Language {Binding Name}}" />
+        <TextBlock Text="{lay:Language Key='123'}" />
+        <TextBox Text="{Binding Items[3].Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+            <be:Interaction.Triggers>
+                <be:EventTrigger EventName="TextChanged">
+                    <be:InvokeCommandAction Command="{Binding TextChangedCommand}" />
+                </be:EventTrigger>
+            </be:Interaction.Triggers>
+        </TextBox>
+        <ItemsControl ItemsSource="{Binding Items}">
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{lay:Language {Binding Value}}" />
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
+    </StackPanel>
 </Window>
