--- a/src/LayUI.Wpf.Extensions.App/languages/zh_CN.xaml
+++ b/src/LayUI.Wpf.Extensions.App/languages/zh_CN.xaml
@@ -5,4 +5,5 @@
     <sys:String x:Key="Name">就叫我啊禾斗吧</sys:String>
     <sys:String x:Key="Test">测试</sys:String>
     <sys:String x:Key="Title">欢迎使用多语言插件</sys:String>
+    <sys:String x:Key="Remind">提醒</sys:String>
 </ResourceDictionary>
