完成代码调整，兼容跟多加载方式，简化代码，复用原生效果

--- a/src/LayUI.Wpf.Extensions.App/Views/MainWindow.xaml
+++ b/src/LayUI.Wpf.Extensions.App/Views/MainWindow.xaml
@@ -27,13 +27,7 @@
         <StackPanel Grid.Row="1">
             <TextBlock Text="{lay:Language {Binding Name}}" />
             <TextBlock Text="{lay:Language Key='123'}" />
-            <TextBox Text="{Binding Items[3].Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
-                <be:Interaction.Triggers>
-                    <be:EventTrigger EventName="TextChanged">
-                        <be:InvokeCommandAction Command="{Binding TextChangedCommand}" />
-                    </be:EventTrigger>
-                </be:Interaction.Triggers>
-            </TextBox>
+            <TextBox Text="{Binding Items[3].Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             <ItemsControl ItemsSource="{Binding Items}">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
