--- a/src/LayUI.Wpf.Extensions.App/App.xaml
+++ b/src/LayUI.Wpf.Extensions.App/App.xaml
@@ -2,21 +2,26 @@
     x:Class="LayUI.Wpf.Extensions.App.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:lang="clr-namespace:LayUI.Wpf.Extensions;assembly=LayUI.Wpf.Extensions"
     xmlns:local="clr-namespace:LayUI.Wpf.Extensions.App"
-    xmlns:prism="http://prismlibrary.com/">
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:prism="http://prismlibrary.com/"
+    mc:Ignorable="d">
     <Application.Resources>
         <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/LayUI.Wpf;component/Themes/Default.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-            <ResourceDictionary x:Key="en_US" Source="pack://SiteOfOrigin:,,,/languages/en_US.xaml" />
-            <ResourceDictionary x:Key="zh_CN" Source="pack://SiteOfOrigin:,,,/languages/zh_CN.xaml" />
             <ResourceDictionary x:Key="lang">
                 <ResourceDictionary.MergedDictionaries>
                     <ResourceDictionary Source="/languages/en_US.xaml" />
                     <ResourceDictionary Source="/languages/zh_CN.xaml" />
                 </ResourceDictionary.MergedDictionaries>
             </ResourceDictionary>
+            <ResourceDictionary x:Key="en_US" Source="pack://SiteOfOrigin:,,,/languages/en_US.xaml" />
+            <ResourceDictionary x:Key="zh_CN" Source="pack://SiteOfOrigin:,,,/languages/zh_CN.xaml" />
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/LayUI.Wpf;component/Themes/Default.xaml" />
+                <ResourceDictionary Source="pack://SiteOfOrigin:,,,/languages/zh_CN.xaml" />
+            </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
 </prism:PrismApplication>
